# JSONServerClient_Task

./: CMakeLists.txt  conanfile.txt  db.json  package.json
include/: Author.hpp  AuthorCRUD.hpp  Blog.hpp  BlogCRUD.hpp  JsonServerClient.hpp
src/: Author.cpp  AuthorCRUD.cpp  Blog.cpp  BlogCRUD.cpp  JsonServerClient.cpp  main.cpp
